--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "main": "index.js",
     "license": "MIT",
     "dependencies": {
-        "mysql": "^2.13.0",
-        "sequelize": "^3.30.4",
-        "sequelize-cli": "^2.7.0"
+        "mysql2": "^1.6.1",
+        "sequelize": "^4.41.2",
+        "sequelize-cli": "^5.2.0"
     },
     "scripts": {
         "start": "node index.js"
